# ComfyUI-Teeth

./: .gitignore  README.md  __init__.py  api_key.ini.example  findContours.py  gemini2.py  get_first_seg.py  image_grid_lines.py  image_selector_node.py  load_text_file.py  local_api.py  pyproject.toml  requirements.txt  run_python_code.py  splitGridImage.py
js/: image.js
web/css/: style.css
web/js/: image.js
